# OBD-II-MCP-Server

./: .gitignore  LICENSE  README.md  elm.log.1  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md  DEMO.md  PLAN.md  RELEASE.md
scripts/: README.md  connect_test.py  live_read.py  rev_watch.py  sensors.py
src/obd_mcp/: __init__.py  __main__.py  client.py  connection.py  dtc_db.py  errors.py  nhtsa.py  obdb.py  schemas.py  server.py  sidekick.py  tools.py  vin.py
src/obd_mcp/data/: dtc.sqlite.source
src/obd_mcp/data/obdb/: LICENSE
src/obd_mcp/data/obdb/ford/: f-150.json  mustang.json
tests/: conftest.py  test_client.py  test_client_errors.py  test_connection.py  test_dtc_db.py  test_errors.py  test_mode01_coverage.py  test_nhtsa.py  test_obdb.py  test_output_schemas.py  test_ping.py  test_server_elicitation.py  test_server_registration.py  test_server_sessions.py  test_server_sidekick_gating.py  test_sidekick.py  test_simulator_roundtrip.py  test_tools_dtc_gating.py  test_tools_dtcs.py  test_tools_freeze_frame.py  test_tools_live_data.py  test_tools_manufacturer_signals.py  test_tools_nhtsa.py  test_tools_readiness.py  test_tools_record_session.py  test_tools_repair.py  test_tools_vehicle_info.py  test_vin.py
