[project]
name = "obd-mcp"
version = "0.1.0"
description = "MCP server bridging LLM agents to a live OBD-II port via an ELM327 adapter."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Mark Bohaychuk", email = "mark@bohaychuk.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "obd-ii",
    "obd2",
    "elm327",
    "automotive",
    "diagnostics",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.27.0",
    "obd==0.7.3",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/mbohaychuk/OBD-II-MCP-Server"
Repository = "https://github.com/mbohaychuk/OBD-II-MCP-Server"
Issues = "https://github.com/mbohaychuk/OBD-II-MCP-Server/issues"
Changelog = "https://github.com/mbohaychuk/OBD-II-MCP-Server/releases"
"Design notes" = "https://github.com/mbohaychuk/OBD-II-MCP-Server/blob/main/docs/DECISIONS.md"

[project.scripts]
obd-mcp = "obd_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obd_mcp"]

# ELM327-emulator (dev/test simulator, git source) builds via setuptools-scm and
# needs setuptools available in the build environment.
[tool.uv.extra-build-dependencies]
elm327-emulator = ["setuptools<80"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.11",
    # PyPI's elm327-emulator 3.0.4/3.0.5 are sdist-only and build via
    # setuptools-scm, which walks up to the *parent* git repo and stamps a
    # mismatched `3.0.5.postN` version that uv rejects on a clean build (CI /
    # fresh clones). Pin the git source at the v3.0.5 tag instead: uv clones it
    # with its own .git, so the version resolves cleanly to 3.0.5 — the exact
    # code PyPI 3.0.5 was cut from. Dev/test only; not in the published package.
    "ELM327-emulator @ git+https://github.com/Ircama/ELM327-emulator.git@690c9d4719ed0aa49661a644f2eea2539bb97bbf",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/obd_mcp"]

[[tool.mypy.overrides]]
module = ["obd.*", "elm.*"]
ignore_missing_imports = true
